# texture-maker

./: .gitignore  README.md  README_zh.md  app.py  config.py  image_model.py  main.py  pyproject.toml
.workflow/: state.json
.workflow/history/: 2026-05-25-10项交互与功能优化.json
.workflow/memory/: CHANGELOG.md  context.md
.workflow/outputs/task-20260525-001/execution/: README.md
.workflow/outputs/task-20260525-001/verification/: review-result.json
src/texture_maker/: __init__.py  app.py  config.py  image_model.py  tools.py
src/texture_maker/ui/: canvas_widget.py  main_window.py  new_project_dialog.py  palette.py
tests/: test_image_model.py  test_tools.py
ui/: canvas_widget.py  main_window.py  new_project_dialog.py  palette.py  tools.py  welcome_screen.py
